# counter-example

./: Cargo.toml  README.md  rust-toolchain.toml
apps/counter_app/: Cargo.toml
apps/counter_app/src/: counter_logic.rs  main.rs
apps/counter_logic_circuit/: Cargo.toml
apps/counter_logic_circuit/methods/: Cargo.toml
apps/counter_logic_circuit/methods/guest/: Cargo.toml
apps/counter_witness/: Cargo.toml
apps/counter_witness/src/: lib.rs
counter_app/: Cargo.toml
counter_app/src/: main.rs
counter_logic/: Cargo.toml
counter_logic/src/: counter_logic.rs  lib.rs
counter_logic_circuit/counter_methods/counter_guest/: Cargo.toml
counter_logic_circuit/counter_methods/counter_guest/src/: main.rs
counter_witness/: Cargo.toml
myapp/: Cargo.toml
src/: eth.rs  main.rs  test.rs  transaction.rs
