[package]
name = "counter-app-test"
version = "0.1.0"
edition = "2021"

[dependencies]
counter_logic_circuit = { path = "deps/counter_logic_circuit" }
counter_library = { path = "deps/counter_library", features=["nif"]}
counter_witness = { path = "deps/counter_witness"}
rand = "0.9.2"
arm = { git = "https://github.com/anoma/arm-risc0", branch = "m1dnight/risc0-3.0.3", default-features = true, features = ["groth16_prover", "bonsai", "transaction"] }
# evm_protocol_adapter_bindings = { git = "https://github.com/anoma/evm-protocol-adapter", branch =  "m1dnight/counter-example"}
tokio = "1.47.1"
alloy = { version = "1.0.23", features = ["full"] }